Got delete working for the cart and items are displaying cleaner

--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,11 @@ main {
 #cartButton {
   margin-left: 80%;
 }
+
+#cartCard {
+  margin-left: 80%;
+}
+/* .MuiCardContent-root:last-child {
+  overflow: auto;
+  padding-bottom: 24px;
+} */
