--- a/src/style.css
+++ b/src/style.css
@@ -12,13 +12,30 @@ main {
 }
 
 #cartButton {
-  margin-left: 80%;
+  margin-left: 75%;
 }
 
 #cartCard {
-  margin-left: 80%;
+  margin-left: 85%;
 }
-/* .MuiCardContent-root:last-child {
-  overflow: auto;
-  padding-bottom: 24px;
-} */
+
+#cartCardProducts {
+  margin-left: 85%;
+}
+
+#productDetails{
+  margin-top: 100px;
+}
+
+#productDetailsTitle {
+  text-align: center;
+  font-size: 50px;
+}
+
+#shoppingCart {
+  margin-top: 100px;
+}
+
+footer {
+  text-align: center;
+}
