--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,9 @@ header {
   font-family: 'Poppins', sans-serif;
   background-color: #C0D6DF;
 }
-
+#category {
+  margin-top: 100px;
+}
 #cartButton {
   font-family: 'Poppins', sans-serif;
   margin-left: 65%;
